WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136408
SVGImage::drawPatternForContainer creates a buffer without respecting the destination's acceleration setting
https://bugs.webkit.org/show_bug.cgi?id=136408
Summary
SVGImage::drawPatternForContainer creates a buffer without respecting the des...
Tim Horton
Reported
2014-08-30 22:23:35 PDT
Mismatched acceleration settings == terrible performance.
rdar://problem/12013317
Attachments
patch
(1.88 KB, patch)
2014-08-30 22:25 PDT
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-08-30 22:25:17 PDT
Created
attachment 237419
[details]
patch
WebKit Commit Bot
Comment 2
2014-08-30 22:27:32 PDT
Attachment 237419
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2014-08-31 00:04:05 PDT
Comment on
attachment 237419
[details]
patch Any way to test this? Is this a performance enhancement or something else?
Tim Horton
Comment 4
2014-08-31 00:34:01 PDT
Just performance, no way to test (unless we were to add some mechanism to log when someone paints from an unaccelerated buffer to an accelerated context or vice versa, and then wrote some tests around that).
Tim Horton
Comment 5
2014-08-31 00:42:11 PDT
http://trac.webkit.org/changeset/173143
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug