SVGImage::drawPatternForContainer creates a buffer without respecting the destination's acceleration setting https://bugs.webkit.org/show_bug.cgi?id=136408 <rdar://problem/12013317>

Reviewed by Dan Bernstein.

No new tests required, just a performance improvement.

* svg/graphics/SVGImage.cpp:
(WebCore::SVGImage::drawPatternForContainer):
Use ImageBuffer::createCompatibleBuffer, which passes the destination's
acceleration setting through to the ImageBuffer constructor.

I didn't use GraphicsContext::createCompatibleBuffer because adjusting
how this function applies the destination's CTM is outside the scope of this patch.


Canonical link: https://commits.webkit.org/154214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173143 268f45cc-cd09-0410-ab3c-d52691b4dbfc